--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.4",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.0"
