--- a/package.json
+++ b/package.json
@@ -22,11 +22,8 @@
     "react-scripts": "5.0.0"
   },
   "scripts": {
-    "dev": "webpack serve",
-    "build": "webpack",
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --mode development"
   },
   "eslintConfig": {
     "extends": [
