--- a/package.json
+++ b/package.json
@@ -23,13 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "webpack": "webpack",
-    "webpack-dev-server": "webpack-dev-server",
-    "dev": "npm run webpack-dev-server -- --env mode=development",
-    "prod": "npm run webpack -- --env mode=production"
+    "build": "webpack --mode production",
+    "start": "webpack serve --config ./webpack.config.js --mode development"
   },
   "eslintConfig": {
     "extends": [
